I already said it

--- a/beginner_video_interview.html
+++ b/beginner_video_interview.html
@@ -63,6 +63,7 @@
     <button id="startQuestion" class="button">Start question</button>
     <button id="nextQuestion" class="button" disabled>Next question</button>
 
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.814.0.min.js"></script>
     <script src="beginner_video_interview.js"></script>
   </body>
 </html>
