--- a/index.html
+++ b/index.html
@@ -7,40 +7,60 @@
     <title>ESL Student Interview</title>
   </head>
   <body>
-    <h2>HOFT ESL Student Interview</h2>
-    <form action="beginner interview.html" method="post">
-      <div>
-        <label for="first_name">First Name:</label>
-        <input
-          type="text"
-          id="first_name"
-          name="first_name"
-          required
-          placeholder="If you don't have a first name, please put FNU"
-        />
-      </div>
-      <div>
-        <label for="last_name">Last Name:</label>
+    <div class="container">
+      <h2>HOFT ESL Student Interview</h2>
+
+      <p>
+        Please fill out the form below to schedule an interview with one of our
+        instructors.
+      </p>
+
+      <form action="beginner interview.html" method="post">
+        <div class="label_and_checkbox">
+          <label for="first_name">First Name:</label>
+          <div class="checkbox_group">
+            <input type="checkbox" id="one_name" name="one_name" />
+            <label for="one_name">I only have one name</label>
+          </div>
+        </div>
+
+        <div>
+          <input
+            type="text"
+            id="first_name"
+            name="first_name"
+            required
+            placeholder="If you don't have a first name, please check the box above"
+          />
+        </div>
+
+        <div>
+          <label for="last_name">Last Name:</label>
+        </div>
         <input type="text" id="last_name" name="last_name" required />
-      </div>
-      <div>
-        <label for="phone_number">Phone Number:</label>
-        <input
-          type="tel"
-          id="phone_number"
-          name="phone_number"
-          placeholder="Country Code - Area Code - Number"
-        />
-      </div>
-      <div>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
-      </div>
-      <div style="margin-top: 20px">
-        <button type="submit">Submit</button>
-        <button type="skip">Skip</button>
-      </div>
-    </form>
+        <div>
+          <label for="phone_number">Phone Number:</label>
+        </div>
+        <div>
+          <input
+            type="tel"
+            id="phone_number"
+            name="phone_number"
+            placeholder="Country Code - Area Code - Number"
+          />
+        </div>
+        <div>
+          <label for="email">Email:</label>
+        </div>
+        <div>
+          <input type="email" id="email" name="email" required />
+        </div>
+        <div style="margin-top: 20px">
+          <button type="submit">Submit</button>
+          <button type="button" id="skip">Skip</button>
+        </div>
+      </form>
+    </div>
     <script>
       // Get the submit button and add an event listener
       const submitButton = document.querySelector('button[type="submit"]');
