Video uoload progress added

--- a/beginner_video_interview.html
+++ b/beginner_video_interview.html
@@ -10,15 +10,16 @@
     <img src="HOFT_web1.png" alt="logo" class="img" />
     <h1 id="questionHeader"></h1>
     <video id="questionVideo" class="questionVideo" src=""></video>
-    <p id="answerRecorderWarning"></p>
+    <h2 id="answerRecorderWarning"></h2>
     <video id="answerRecorder"></video>
     <div id="countdownQuestion"></div>
     <div id="countdownAnswer"></div>
     <button id="startQuestion" class="button">Start question</button>
-    <label for="uploadProgress"
-      >Answer Video Upload Progress: <span id="progressLabel">0%</span></label
+    <label for="uploadProgressBar"
+      >Answer Video Upload Progress:
+      <span id="progressPercentageLabel">0%</span></label
     >
-    <progress id="uploadProgress" value="0" max="100"></progress>
+    <progress id="uploadProgressBar" value="0" max="100"></progress>
     <button id="nextQuestion" class="button" disabled>Next question</button>
 
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.814.0.min.js"></script>
