everything is working now.

--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
         // Store the first and last name in the session storage
         sessionStorage.setItem("firstName", firstName);
         sessionStorage.setItem("lastName", lastName);
+        sessionStorage.setItem("phoneNumber", phoneNumber);
+        sessionStorage.setItem("email", email);
 
         // Redirect to the next page
         window.location.href = "beginner_video_interview.html";
