element to display images added

--- a/beginner-video-interview.html
+++ b/beginner-video-interview.html
@@ -10,6 +10,7 @@
     <img src="HOFT_web1.png" alt="logo" class="img" />
     <h1 id="questionHeader"></h1>
     <video id="questionVideo" class="questionVideo" src=""></video>
+    <div id="extraContent"></div>
     <h2 id="answerRecorderWarning"></h2>
     <div id="answerCountdown"></div>
     <video id="answerRecorder"></video>
