Changed Page title

--- a/beginner-video-interview.html
+++ b/beginner-video-interview.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Question 1</title>
+    <title>Beginner Interview</title>
   </head>
   <body>
     <img src="HOFT_web1.png" alt="logo" class="img" />
