--- a/beginner-video-interview.html
+++ b/beginner-video-interview.html
@@ -7,7 +7,7 @@
     <title>Beginner Interview</title>
   </head>
   <body>
-    <img src="HOFT_web1.png" alt="logo" class="img" />
+    <img src="HOFT_web1.png" alt="logo" class="logoimg" />
     <h1 id="questionHeader"></h1>
     <video id="questionVideo" class="questionVideo" src=""></video>
     <div id="extraContent"></div>
