--- a/advanced-video-interview.html
+++ b/advanced-video-interview.html
@@ -20,6 +20,6 @@
     <button id="nextQuestion" class="button" disabled>Next question</button>
 
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.814.0.min.js"></script>
-    <script src="adv"></script>
+    <script src="advanced-video-interview.js"></script>
   </body>
 </html>
