--- a/advanced-video-interview.html
+++ b/advanced-video-interview.html
@@ -9,7 +9,7 @@
   <body>
     <img src="HOFT_web1.png" alt="logo" class="logoimg" />
     <h1 id="questionHeader"></h1>
-    <video id="questionVideo" class="questionVideo" src=""></video>
+    <video id="questionVideo" playsinline class="questionVideo" src=""></video>
     <div id="extraContent"></div>
     <h2 id="answerRecorderWarning"></h2>
     <div id="answerCountdown"></div>
