playsinline for user steam

--- a/advanced-video-interview.html
+++ b/advanced-video-interview.html
@@ -13,7 +13,7 @@
     <div id="extraContent"></div>
     <h2 id="answerRecorderWarning"></h2>
     <div id="answerCountdown"></div>
-    <video id="answerRecorder"></video>
+    <video id="answerRecorder" playsinline></video>
     <div id="countdownQuestion"></div>
     <div id="countdownAnswer"></div>
     <button id="startQuestion" class="button">Start question</button>
