--- a/beginner-video-interview.html
+++ b/beginner-video-interview.html
@@ -9,11 +9,11 @@
   <body>
     <img src="HOFT_web1.png" alt="logo" class="logoimg" />
     <h1 id="questionHeader"></h1>
-    <video id="questionVideo" class="questionVideo" src=""></video>
+    <video id="questionVideo" playsinline class="questionVideo" src=""></video>
     <div id="extraContent"></div>
     <h2 id="answerRecorderWarning"></h2>
     <div id="answerCountdown"></div>
-    <video id="answerRecorder"></video>
+    <video id="answerRecorder" playsinline></video>
     <div id="countdownQuestion"></div>
     <div id="countdownAnswer"></div>
     <button id="startQuestion" class="button">Start question</button>
