--- a/intermediate-video-interview.html
+++ b/intermediate-video-interview.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <img src="HOFT_web1.png" alt="logo" class="logoimg" />
-    <h2 id="questionHeader"></h2>
+    <h3 id="questionHeader"></h3>
     <video id="questionVideo" playsinline class="questionVideo" src=""></video>
     <div id="extraContent"></div>
     <h3 id="answerRecorderWarning"></h3>
@@ -17,6 +17,7 @@
     <div id="countdownQuestion"></div>
     <div id="countdownAnswer"></div>
     <button id="startQuestion" class="button">Start question</button>
+    <button id="forceNextQuestion">Stop recording and upload answer</button>
     <button id="nextQuestion" class="button" disabled>Next question</button>
 
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.814.0.min.js"></script>
