--- a/beginner-video-interview.html
+++ b/beginner-video-interview.html
@@ -8,15 +8,16 @@
   </head>
   <body>
     <img src="HOFT_web1.png" alt="logo" class="logoimg" />
-    <h1 id="questionHeader"></h1>
+    <h3 id="questionHeader"></h3>
     <video id="questionVideo" playsinline class="questionVideo" src=""></video>
     <div id="extraContent"></div>
-    <h2 id="answerRecorderWarning"></h2>
+    <h3 id="answerRecorderWarning"></h3>
     <div id="answerCountdown"></div>
     <video id="answerRecorder" playsinline></video>
     <div id="countdownQuestion"></div>
     <div id="countdownAnswer"></div>
     <button id="startQuestion" class="button">Start question</button>
+    <button id="forceNextQuestion">Stop recording and upload answer</button>
     <button id="nextQuestion" class="button" disabled>Next question</button>
 
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.814.0.min.js"></script>
