--- a/advanced-video-interview.html
+++ b/advanced-video-interview.html
@@ -9,7 +9,12 @@
   <body>
     <img src="HOFT_web1.png" alt="logo" class="logoimg" />
     <h3 id="questionHeader"></h3>
-    <video id="questionVideo" playsinline class="questionVideo" src=""></video>
+    <video
+      id="questionVideo"
+      playsinline
+      class="questionVideo"
+      src="https://hoftfiles.nyc3.digitaloceanspaces.com/questionVideos/advancedQuestionVideos/aqv1.MOV"
+    ></video>
     <div id="extraContent"></div>
     <h3 id="answerRecorderWarning"></h3>
     <div id="answerCountdown"></div>
